# AnasenSim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  input.txt
etc/: nabin_deadChannels.txt
src/: CMakeLists.txt  main.cpp
src/Detectors/: AnasenArray.cpp  AnasenArray.h  DeadChannelMap.cpp  DeadChannelMap.h  IsEqual.h  PCDetector.cpp  PCDetector.h  QQQDetector.cpp  QQQDetector.h  SX3Detector.cpp  SX3Detector.h
src/Dict/: CMakeLists.txt  LinkDef_SimDict.h  Nucleus.cpp  Nucleus.h
src/Plotter/: CMakeLists.txt  Plotter.cpp  Plotter.h  main.cpp
src/Sim/: Application.cpp  Application.h  DecaySystem.cpp  DecaySystem.h  FileWriter.cpp  FileWriter.h  MassLookup.cpp  MassLookup.h  OneStepSystem.cpp  OneStepSystem.h  RandomGenerator.cpp  RandomGenerator.h  Reaction.cpp  Reaction.h  ReactionSystem.cpp  ReactionSystem.h  RxnType.h  SimBase.h  Target.cpp  Target.h  ThreadPool.h  TwoStepSystem.cpp  TwoStepSystem.h
src/Utils/: Timer.cpp  Timer.h  UUID.h
